myteo/test/analyze/main_function/multiple_mains_same_file.exp
Error: Main function has already been declared
test/analyze/main_function/multiple_mains_same_file.myte:5:4
 5 | fun main() {}
   |     ^^^^

Error: Name "main" already bound in module
test/analyze/main_function/multiple_mains_same_file.myte:5:4
 5 | fun main() {}
   |     ^^^^